<?xml version="1.0"?>
<package format="3">
  <name>pointfoot_gazebo</name>
  <version>0.0.0</version>
  <description>The pointfoot_gazebo package</description>
  <maintainer email="limx@limxdynamics.com">limxdynamics</maintainer>
  <author email="limx@limxdynamics.com">limxdynamics</author>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>angles</depend>
  <depend>gazebo_dev</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>realtime_tools</depend>
  <build_depend>pointfoot_sdk_sim</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros2_control plugin="${prefix}/pointfoot_hw_sim_plugins.xml"/>
  </export>
</package>